--- a/hw29/src/css/style.css
+++ b/hw29/src/css/style.css
@@ -76,8 +76,8 @@ a:hover {
 
 .ball-item {
   border: 0.1875em solid #0f1c3f;
-  width: 50px;
-  height: 50px;
+  /* width: 50px;
+  height: 50px; */
   border-radius: 50%;
   position: absolute;
 }
